# alignment_rlhf

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  first_try.py  pyproject.toml  task.md
reports/: README.md  val_rewards.csv
scripts/: eval.py  save_sft_model.py  train_reinforce.py  train_rm_manual.py
src/: first_try.py  main.py
src/kolya_rlhf/: datasets.py  utils.py
